Fix lyrics behind other lyrics not accepting input and top lyrics accepting input when hidden

--- a/_assets/stylesheets/pages/music.scss
+++ b/_assets/stylesheets/pages/music.scss
@@ -75,6 +75,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
+  pointer-events: none;
+
   .content {
     overflow: hidden;
     padding: 15px;
@@ -83,6 +85,7 @@
 
 .song.playing .lyrics {
   opacity: 0.99999999;
+  pointer-events: auto;
 
   .content {
     overflow: auto;
